Added boxes, structure and formatting

--- a/index.html
+++ b/index.html
@@ -4,16 +4,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, follow">
 
-    <link rel="StyleSheet" type="text/css" href="rsc/style/">
-    <script rel="JavaScript" type="text/JavaScript" src="meta/js/"></script>
+    <link rel="StyleSheet" type="text/css" href="rsc/style/a.css">
 </head>
 <body>
     <header>
 
     </header>
     <main>
-        <section>
+        <section id="banner" class="box box1">
+            <h1>fun-with-css</h1>
+            <p>Haivng some fun with HTML and CSS! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        <section id="breakdown" class="box box2">
+            <h1>The Breakdown</h1>
+            <p>Non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Diam vel quam elementum pulvinar etiam. Iaculis nunc sed augue lacus viverra vitae. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam. Hac habitasse platea dictumst quisque sagittis purus. At elementum eu facilisis sed odio morbi. Mi bibendum neque egestas congue quisque egestas diam. Venenatis tellus in metus vulputate eu. Purus semper eget duis at tellus at urna condimentum. Arcu vitae elementum curabitur vitae nunc sed velit.</p>
+            <section class="box inner-box first">
+                <h2>Overlay</h2>
+                <p>This describes the overlay.</p>
+            </section>
+            <section class="box inner-box secondary">
+                <h3>The Details</h3>
+                <p>This describes the details.</p>
+            </section>
+            <section>
+                <p>This describes more, et al!</p>
+            </section>
+        </section>
+        <section id="it-works" class="box box3">
+            <h1>How It Works</h1>
+            <p>Vitae et leo duis ut diam. Tincidunt arcu non sodales neque sodales ut etiam. Mollis aliquam ut porttitor leo a diam. Nam aliquam sem et tortor. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Id porta nibh venenatis cras sed felis eget velit aliquet. Ac turpis egestas integer eget aliquet nibh. Porttitor lacus luctus accumsan tortor posuere ac ut consequat. In dictum non consectetur a erat nam at. Vel eros donec ac odio tempor orci dapibus. Nibh cras pulvinar mattis nunc.</p>
+            <section id="we-can" class="box box4">
+            </section>
+        </section>
 
+        <section id="reflect" class="box box5">
+            <h1>Reflection</h1>
+            <p>Ut sem viverra aliquet eget sit amet. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Duis convallis convallis tellus id interdum. Eget dolor morbi non arcu risus quis varius quam quisque. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Magna ac placerat vestibulum lectus mauris ultrices. Cursus mattis molestie a iaculis at erat pellentesque adipiscing. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin.</p>
         </section>
 
     </main>
