--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <main>
         <section id="banner" class="box box1">
             <h1>fun-with-css</h1>
-            <p>Haivng some fun with HTML and CSS! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <nav></nav>
+            <!-- <p>Haivng some fun with HTML and CSS! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
         </section>
         <section id="breakdown" class="box box2">
             <h1>The Breakdown</h1>
