Added SASS, updated element styling.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="robots" content="noindex, follow">
 
     <link rel="StyleSheet" type="text/css" href="rsc/style/a.css">
+    <link rel="StyleSheet" type="text/css" href="rsc/style/as.css">
 </head>
 <body>
     <header>
@@ -12,8 +13,15 @@
     </header>
     <main>
         <section id="banner" class="box box1">
-            <h1>fun-with-css</h1>
-            <nav></nav>
+            <section class="box inner-box overlay">
+                <h1>fun-with-css</h1>
+                <nav>
+                    <a href=".">home</a>
+                    <a href="#breakdown">breakdown</a>
+                    <a href="#it-works">how it works</a>
+                    <a href="#reflect">reflection</a>
+                </nav>
+            </section>
             <!-- <p>Haivng some fun with HTML and CSS! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
         </section>
         <section id="breakdown" class="box box2">
@@ -24,7 +32,7 @@
                 <p>This describes the overlay.</p>
             </section>
             <section class="box inner-box secondary">
-                <h3>The Details</h3>
+                <h2>The Details</h2>
                 <p>This describes the details.</p>
             </section>
             <section>
