Configured css reset

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, follow">
 
+    <link rel="StyleSheet" type="text/css" href="rsc/style/reset.css">
     <link rel="StyleSheet" type="text/css" href="rsc/style/a.css">
     <link rel="StyleSheet" type="text/css" href="rsc/style/as.css">
 </head>
